--- a/KernelPerceptron.ipynb
+++ b/KernelPerceptron.ipynb
@@ -138,10 +138,10 @@
     "        for epoch in range(self.epochs):\n",
     "    \n",
     "            if (epoch != self.epochs-1) :\n",
-    "            # looping over the training set\n",
+    "                # looping over the training set\n",
     "                for i in range(n_samples):\n",
     "            \n",
-    "                # check if made a mistake and update alpha\n",
+    "                    # check if made a mistake and update alpha\n",
     "                    if self.y_train[i] * np.sum(self.y_train * alpha * K[i])<=0:\n",
     "                        alpha[i]+=1\n",
     "\n",
@@ -161,8 +161,7 @@
     "                        if mistakes_n < training_err:\n",
     "                            training_err = mistakes_n # updating the minimum training error\n",
     "                            ERM_classifier = np.copy(alpha) # storing the classifier with the smallest training error                 \n",
-    "         \n",
-    "        print(\"done !\", training_err/n_samples)       \n",
+    "               \n",
     "        self.alpha = ERM_classifier"
    ]
   },
@@ -188,23 +187,16 @@
     "    \n",
     "        # Learn and update the alpha coefficients \n",
     "        for epoch in range(self.epochs):\n",
-    "            \n",
-    "            running_loss = 0\n",
-    "                \n",
+    "                            \n",
     "            # looping over the training set\n",
     "            for i in range(n_samples):\n",
     "            \n",
     "                # check if signs made a mistacke and update alpha \n",
     "                if self.y_train[i] * np.sum(self.y_train * alpha * K[i])<=0:\n",
-    "                    alpha[i]+=1\n",
-    "                    running_loss +=1 # increase the counter of mistakes per epoch                    \n",
+    "                    alpha[i]+=1                \n",
     "                    \n",
     "                #irrespentively of the error occured increase the running sum\n",
     "                accumulated_alpha = accumulated_alpha + alpha\n",
-    "                \n",
-    "            # print statistics\n",
-    "            loss = running_loss / n_samples\n",
-    "        print(f\"misclassified per epoch: {loss:.2f}\")\n",
     "                \n",
     "        self.alpha = accumulated_alpha "
    ]
@@ -250,7 +242,8 @@
     "            # filling the matrix of dot products\n",
     "            self.results[:,digit] = cl.linear_product\n",
     "    \n",
-    "    \n",
+    "            print(f\"Learned binary classifier for digit: {digit}\")\n",
+    "        \n",
     "        self.pred_labels= np.argmax(self.results, axis = 1)\n",
     "        \n",
     "        return self.pred_labels\n",
